syntax = "proto3";
package proto.config;

option go_package = "github.com/spinnaker/kleat/api/client/config";

import "google/protobuf/wrappers.proto";

import "artifact/artifacts.proto";
import "config/service_enabled.proto";
import "ci/gcb.proto";
import "notification/github_status.proto";
import "notification/slack.proto";
import "notification/twilio.proto";
import "pubsub/pubsub.proto";
import "stats.proto";

// Configuration for the echo microservice.
message Echo {
    notification.Slack slack = 1;
    notification.Twilio twilio = 2;
    notification.GithubStatus githubStatus = 3;

    artifact.Artifacts artifacts = 4;
    pubsub.Pubsub pubsub = 5;
    ci.GoogleCloudBuild gcb = 6;
    Stats stats = 7;
    Scheduler scheduler = 8;
    Services services = 9;

    // Configuration for the status of non-core services.
    message Services {
      // Enabling keel for the echo service
      ServiceSettings keel = 1;
    }

    // Echo scheduler configuration.
    message Scheduler {

        // Cron configuration.
        Cron cron = 1;
        // Cron configuration.
        message Cron {
            // Default timezone. Defaults to `America/Los_Angeles`.
            string timezone = 1;
        }
    }

    // Configuration for optional collection of usage metrics.
    message Stats {
        // Whether to send usage metrics. Defaults to true.
        google.protobuf.BoolValue enabled = 1;

        // A unique ID representing this deployment of Spinnaker.
        string instanceId = 2;

        // The version of Spinnaker being deployed.
        string spinnakerVersion = 3;

        // The endpoint to which usage metrics are sent. This should generally be left
        // empty, in which case metrics are sent to the default endpoint.
        string endpoint = 4;

        // Information about how Spinnaker is configured and deployed.
        DeploymentMethod deploymentMethod = 5;
    }
}
